--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -14,9 +14,17 @@ html
     text-rendering: optimizeSpeed
     -ms-text-size-adjust: 100%
     -webkit-text-size-adjust: 100%
+    height: 100%
 
 body
     margin: 0
+    height: 100%
+
+#___gatsby
+    height: 100%
+
+#gatsby-focus-wrapper
+    height: 100%
 
 article, aside, details, figcaption, figure, footer, header, main, menu, nav,
 section, summary, progress
